--- a/KafkaProducer.ipynb
+++ b/KafkaProducer.ipynb
@@ -2,103 +2,100 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "74b85626",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Defaulting to user installation because normal site-packages is not writeable\n",
-      "Collecting kafka-python\n",
-      "  Downloading kafka_python-2.0.2-py2.py3-none-any.whl (246 kB)\n",
-      "     -------------------------------------- 246.5/246.5 kB 2.5 MB/s eta 0:00:00\n",
-      "Installing collected packages: kafka-python\n",
-      "Successfully installed kafka-python-2.0.2\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# pip install kafka-python"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "cf369440",
+   "execution_count": null,
+   "id": "9f3d7196",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from time import sleep\n",
-    "from kafka import KafkaConsumer, KafkaProducer\n",
+    "from kafka import KafkaProducer\n",
     "from json import dumps\n",
     "import json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "41bf3428",
+   "execution_count": null,
+   "id": "3f74af56",
    "metadata": {},
    "outputs": [],
    "source": [
-    "producer = KafkaProducer(bootstrap_servers=['54.152.105.205:9092'],\n",
+    "producer = KafkaProducer(bootstrap_servers=['54.227.205.231:9092'],\n",
     "                        value_serializer=lambda x:\n",
     "                        dumps(x).encode('utf-8'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "47d5f2f5",
+   "execution_count": null,
+   "id": "7855ff5b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<kafka.producer.future.FutureRecordMetadata at 0x2114a362fd0>"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "producer.send('demo_test', value = \"{'Hello: 'WOrld'}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "3a409efb",
+   "execution_count": null,
+   "id": "341fdde5",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "3add8e4a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "producer.send('demo_test', value = \"{'Name: 'Piyush'}\")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63de7405",
+   "id": "c8b8bd0d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# simulate the stocks data\n",
+    "df = pd.read_csv(\"data/indexProcessed.csv\")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dfb95247",
+   "id": "ae5c085e",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "while True:\n",
+    "    dict_stock = df.sample(1).to_dict(orient=\"records\")[0]\n",
+    "    producer.send('demo_test', value = dict_stock)\n",
+    "    sleep(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a0d2a54c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "producer.flush() # remove the old data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e2e0bf1",
    "metadata": {},
    "outputs": [],
    "source": []
